--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "echarts": "^4.1.0",
     "element-ui": "^2.4.5",
     "vue": "^2.5.17",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
     "vuedraggable": "^2.16.0",
     "vuex": "^3.0.1"
